# AuraCHROME

./: .gitignore  Makefile  README.md  aurachrome  pyproject.toml
.claude/skills/aerochrome-preset/: SKILL.md
aerochrome/: backend.py  dcp.py  encodings.py  grain.py  halation.py  monoir.py  params.py  redscale.py  spectral.py  stocks.py  transform.py
aerochrome-lut/: .gitignore  Makefile  README.md  aurachrome  pyproject.toml
aerochrome-lut/.claude/skills/aerochrome-preset/: SKILL.md
aerochrome-lut/aerochrome/: __init__.py  cube.py  params.py  transform.py
aerochrome-lut/aerochrome/neural/: infer.py  unet.py
aerochrome-lut/scripts/: aero_convert.py  export_raws.py  get_data.py  make_profile.py  train_nir.py
aerochrome-lut/tests/: test_swatches.py
aerochrome-lut/tui/: banner.go  engine.go  engine_live_test.go  main.go  model.go  smoke_test.go  styles.go  view.go
aerochrome/neural/: __init__.py
scripts/: aero_convert.py  apply_lut.py  build_manifest.py  ingest_hyperspectral.py  make_cube.py  make_preset.py  preview.py  synth_spectra.py  train_nir.py  tune.py
tests/: conftest.py  test_halation.py  test_ingest.py  test_monoir.py  test_stocks.py  test_synth.py
tui/: banner.go  engine.go  engine_live_test.go  go.mod  model.go  picker.go  smoke_test.go  styles.go  view.go
