[tool.poetry]
name = "aurachrome"
version = "1.0.0"
description = "Aurachrome - Kodak Aerochrome / EIR false-color film engine: RAW -> 16-bit TIFF, CPU or CUDA GPU."
authors = ["Steven Lamp <srlamp3@gmail.com>"]
readme = "README.md"
packages = [
    { include = "aerochrome" },
    { include = "scripts" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = ">=2.0,<2.6"
scipy = ">=1.13"
pillow = ">=10.0"
rawpy = ">=0.21"
tifffile = ">=2024.1.1"

# GPU acceleration (CUDA 12.x). Optional: `poetry install --with gpu`.
# The nvidia-*-cu12 wheels ship the CUDA runtime libs (incl. libnvrtc) so CuPy
# works without a system-wide CUDA toolkit install.
[tool.poetry.group.gpu]
optional = true

[tool.poetry.group.gpu.dependencies]
cupy-cuda12x = ">=14,<15"
nvidia-cuda-nvrtc-cu12 = "*"
nvidia-cuda-runtime-cu12 = "*"
nvidia-cublas-cu12 = "*"
nvidia-curand-cu12 = "*"
nvidia-cusparse-cu12 = "*"
nvidia-cusolver-cu12 = "*"
nvidia-cufft-cu12 = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"

# Learned RGB->NIR backend (PyTorch, CUDA 12.x). Optional + heavy (~2.3 GB):
# `poetry install --with neural`. The engine uses the neural NIR as the default
# IR source only when this group + a weights file are present, else it falls back
# to the per-pixel GRVI index. torch comes from the explicit PyTorch CUDA index.
[tool.poetry.group.neural]
optional = true

[tool.poetry.group.neural.dependencies]
torch = { version = ">=2.6", source = "pytorch-cu126" }
# torch's CUDA runtime deps. Poetry won't auto-resolve these because the gpu
# group's CuPy pins overlapping nvidia-*-cu12 libs to different versions; pin the
# exact torch-2.6+cu126 set here so `--with neural` is reproducible (these supply
# libcudnn.so.9 etc. that the torch wheel needs at import). From PyPI, not the
# explicit torch index, so no source= marker.
nvidia-cudnn-cu12 = "9.5.1.17"
nvidia-cusparselt-cu12 = "0.6.3"
nvidia-nccl-cu12 = "2.21.5"
nvidia-nvtx-cu12 = "12.6.77"
nvidia-cuda-cupti-cu12 = "12.6.80"


# Synthetic spectral training data (PROSPECT/PROSAIL vegetation). Optional + only
# needed by scripts/synth_spectra.py: `poetry install --with synth`. The generator
# falls back to analytic spectra when this isn't installed.
[tool.poetry.group.synth]
optional = true

[tool.poetry.group.synth.dependencies]
prosail = "^2.0.5"

[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[tool.poetry.scripts]
aurachrome = "scripts.aero_convert:main"
aero-convert = "scripts.aero_convert:main"   # alias (back-compat)

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
